--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  
+  <img id=door src=https://reddoor4autism.org/images/reddoorclosed.png /img>
   <script src="script.js"></script>
 </body>
 
