start page! there's a starting journey button && i centered the stuff

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <img id=door src=https://reddoor4autism.org/images/reddoorclosed.png /img>
+  <p></p>
+  <button id="startButton" onclick="startGame()">Begin your journey?</button>
   <script src="script.js"></script>
 </body>
 
