worked on branch one design

--- a/branch1.html
+++ b/branch1.html
@@ -3,14 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width">   
   <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="branch1.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    
-   <script src="script.js"></script>
+    <img id="door1" class = 'door' src="https://reddoor4autism.org/images/reddoorclosed.png" />
+   <img id="arrow" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg"
+   <script src="branch1.js"></script>
 </body>
 
 </html>
