branch1 door and arrow functions in progress

--- a/branch1.html
+++ b/branch1.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <img id="door1" class = 'door' src="https://reddoor4autism.org/images/reddoorclosed.png" />
-   <img id="arrow" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg"
+    <img id="door1" class = 'door' src="https://reddoor4autism.org/images/reddoorclosed.png" onclick="openDoor()"/>
+   <img id="arrow" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg" onclick = "nextDoor()"/>
+   <p id = info> Click on the door to find out whats inside or click on the arrow to get another door</p>
    <script src="branch1.js"></script>
 </body>
 
