notes on query string

--- a/branch1.html
+++ b/branch1.html
@@ -16,3 +16,6 @@
 </body>
 
 </html>
+
+<!-- branch1.html? fishCount = whatever it is-->
+<!-- in js of branch1: fishCount = getQueryString !!!look up not exact syntax-->
