Setup of branch 2 door and arrow and added functions onclick

--- a/branch2.html
+++ b/branch2.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <img id=door src=https://reddoor4autism.org/images/reddoorclosed.png /img>
+  <h1> Click on the door to open it or click on the arrow to move to the next door.</h1>
+  <img class=door id = door0 onclick="door0Open()" src=https://reddoor4autism.org/images/reddoorclosed.png /img>
+  <img id="arrow" onclick="nextDoor()" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg"/>
   <script src="branch2Script.js"></script>
 </body>
 
