got fishcount transferred between html files!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <img id=door src=https://reddoor4autism.org/images/reddoorclosed.png /img>
   <p></p>
   <button id="startButton" onclick="startGame()">Begin your journey?</button>
+  <a href="branch1.html?fishCount=1">link here testing</a>
   <script src="script.js"></script>
 </body>
 
-</html>
+</html> 
