figuring out the riddle stuff! not done yet unforch

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 <body>
   <img id=door src=https://reddoor4autism.org/images/reddoorclosed.png /img>
   <p></p>
-  <button id="startButton" onclick="startGame()">Begin your journey?</button>
-  <a href="branch1.html?fishCount=1">link here testing</a>
+  <p>Hello. Before we get started, a riddle. All lowercase:</p>
+  <p>A silly doorbell?</p>
+  <input id="input" type="text" placeholder="a...?"/>
+  <button id="passkey">This is my answer.</button>
+  <p id=winlose></p>
+  <a id="startButton" href="branch1.html?fishCount=0"><button>Begin your journey?</button></a>
   <script src="script.js"></script>
 </body>
 
 </html>
 
-<!--NOTE TO SBA: don't forget riddle!!-->
 
