--- a/branch1.html
+++ b/branch1.html
@@ -8,10 +8,12 @@
   <link href="branch1.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-    <img id="door1" class = 'door' src="https://reddoor4autism.org/images/reddoorclosed.png" onclick="openDoor()"/>
-   <img id="arrow" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg" onclick = "nextDoor()"/>
-   <p id = info> Click on the door to find out whats inside or click on the arrow to get another door</p>
+<body> 
+    <p id="fishcounter">Fish: </p>
+    <img id="door1" class = 'door' src="doooooo2.jpg" onclick="openDoor()"/>
+    <!-- can i put a paragraph tag under the door? and only put writing in it when the door opens?-->
+   <img id="arrow" src = "arrow.jpg" onclick = "nextDoor()"/>
+   <p id = info> Click on the door to find out whats inside or click on the arrow to get another door. This door is free to enter! Others may not be</p>
    <script src="branch1.js"></script>
 </body>
 
