riddle function is functioning now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <p>Hello. Before we get started, a riddle. All lowercase:</p>
   <p>A silly doorbell?</p>
   <input id="input" type="text" placeholder="a...?"/>
-  <button id="passkey">This is my answer.</button>
+  <button id="passkey" onclick="checkAnswer()">This is my answer.</button>
+<!--call function up here ^^-->
   <p id=winlose></p>
   <a id="startButton" href="branch1.html?fishCount=0"><button>Begin your journey?</button></a>
   <script src="script.js"></script>
