ending fixed (test version)

--- a/ending.html
+++ b/ending.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
+<!--remove when link is established-->
 <button id="tempEndButton" onclick="end()">click to test function end()</button>
+<!-- remove end-->
+<p id=results>results here!</p>
 <script src="script.js"></script>
 </body>
 
