--- a/branch1.html
+++ b/branch1.html
@@ -12,6 +12,8 @@
     <p id="fishcounter">Fish: </p>
     <img id="door1" class = 'door' src="doooooo2.jpg" onclick="openDoor()"/>
     <!-- can i put a paragraph tag under the door? and only put writing in it when the door opens?-->
+    <p id = 'dooresults'> </p>
+    <a id="link" href="branch2.html?fishCount=0">Click this link to go to the next branch</a>
    <img id="arrow" src = "arrow.jpg" onclick = "nextDoor()"/>
    <p id = info> Click on the door to find out whats inside or click on the arrow to get another door. This door is free to enter! Others may not be</p>
    <script src="branch1.js"></script>
