--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>the doors 🚪</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -14,8 +14,8 @@
   <p>Hello. Before we get started, a riddle. All lowercase:</p>
   <p>A silly doorbell?</p>
   <input id="input" type="text" placeholder="a...?"/>
+  <p></p>
   <button id="passkey" onclick="checkAnswer()">This is my answer.</button>
-<!--call function up here ^^-->
   <p id=winlose></p>
   <a id="startButton" href="branch1.html?fishCount=0"><button>Begin your journey?</button></a>
   <script src="script.js"></script>
