--- a/branch2.html
+++ b/branch2.html
@@ -12,8 +12,11 @@
   <h1 id = info > Click on the door to open it or click on the arrow to move to the next door.</h1>
   <h1 id = "fishDisplay"> Fish Count: </h1>
   <h2 id = roomTxt> </h2>
-  <img class=door id = door0 onclick="door0Open()" src="https://reddoor4autism.org/images/reddoorclosed.png" /img>
+  <img class=door id = door0 onclick="openDoor()" src="https://reddoor4autism.org/images/reddoorclosed.png" /img>
   <img id="arrow" onclick="nextDoor()" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg"/>
+  <button id = "backBtn" style = "display: none;" onclick = "toEnd">Continue</button>
+  <textarea id="input" rows="2" cols="25"></textarea>
+  <button id="answer" onclick="riddle()">Answer</button>
   <img class = "roomImg" id="room0" src = "https://www.news-journalonline.com/gcdn/presto/2022/12/07/NDNJ/f67dae31-e590-4d66-b766-94b8e321bead-FISH_TANK08.jpg"/>
   <script src="branch2Script.js"></script>
 </body>
