ending added images

--- a/ending.html
+++ b/ending.html
@@ -13,7 +13,8 @@
 <button id="tempEndButton" onclick="end()">click to test function end()</button>
 <!-- remove end-->
 <p id=results>results here!</p>
-<script src="script.js"></script>
+<img id="winImg" src=""/>
+<script src="ending.js"></script>
 </body>
 
 </html>
