this might not work...

--- a/branch2.html
+++ b/branch2.html
@@ -12,6 +12,7 @@
   <h1 id = info > Click on the door to open it or click on the arrow to move to the next door.</h1>
   <h1 id = "fishDisplay"> Fish Count: </h1>
   <h2 id = roomTxt> </h2>
+  <a id="link" href="ending.html">Click this link to go to the end</a>
   <img class = door id = door0 onclick="openDoor()" src="https://reddoor4autism.org/images/reddoorclosed.png" /img>
   <img class = nDoor id = door1 onclick="openDoor()" src = "https://indigodoors.com/images/products/products_photos/watermarked-13.jpg">
   <img id="arrow" onclick="nextDoor()" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg"/>
