fixed ending and added img

--- a/ending.html
+++ b/ending.html
@@ -7,9 +7,10 @@
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-<p id=results>results here!</p>
+<img id="endDoor" src="endDoor.png"/>
+<button id="endBtn" onclick="end()">open door</button>
+<p id=results></p>
 <img id="winImg" src=""/>
 <script src="ending.js"></script>
 </body>
