added fish display

--- a/ending.html
+++ b/ending.html
@@ -8,6 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+<p id="fishDisplay">Fish Count: </p>
 <img id="endDoor" src="endDoor.png"/>
 <button id="endBtn" onclick="end()">open door</button>
 <p id=results></p>
