--- a/branch1.html
+++ b/branch1.html
@@ -15,7 +15,7 @@
     <p id = 'dooresults'> </p>
     <a id="link" href="branch2.html?fishCount=0">Click this link to go to the next branch</a>
    <img id="arrow" src = "arrow.jpg" onclick = "nextDoor()"/>
-   <p id = info> Click on the door to find out whats inside or click on the arrow to get another door. This door is free to enter! Others may not be</p>
+   <p id = info> Click on the door to find out whats inside or click on the arrow to get another door. This door is free to enter! Others may not be.</p>
    <script src="branch1.js"></script>
 </body>
 
