changed link from end to branch 3

--- a/branch2.html
+++ b/branch2.html
@@ -12,7 +12,7 @@
   <h1 id = info > Click on the door to open it or click on the arrow to move to the next door.</h1>
   <h1 id = "fishDisplay"> Fish Count: </h1>
   <h2 id = roomTxt> </h2>
-  <a id="link" href="ending.html">Click this link to go to the end</a>
+  <a id="link" href="branch3.html">Click this link to go to the next branch</a>
   <img class = door id = door0 onclick="openDoor()" src="https://reddoor4autism.org/images/reddoorclosed.png" /img>
   <img class = nDoor id = door1 onclick="openDoor()" src = "https://indigodoors.com/images/products/products_photos/watermarked-13.jpg">
   <img class = nDoor id = door2 onclick="openDoor()" src = "https://img.freepik.com/premium-photo/purple-door-creative-illustration-open-closed-door-entrance-realistic-doorway-isolated-background-3d_594417-2659.jpg">
@@ -20,7 +20,7 @@
   <img id="arrow" onclick="nextDoor()" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg"/>
   <textarea id="input" rows="2" cols="25"></textarea>
   <button id="answer" onclick="riddle()">Answer</button>
-  <a id="link" href="ending.html?fishCount=0">Click this link to go to the next branch</a>
+  <a id="link" href="branch3.html?fishCount=0">Click this link to go to the next branch</a>
   <img id = "catImg" style="float:left;height:100%;width:100%;object-fit:cover;">
   <img class = "roomImg" id = "room2" src = "https://i.pinimg.com/1200x/2e/51/04/2e5104455462d97f6b9a51a30aef4dda.jpg">
   <img class = "roomImg" id = "catImg" style="float:left;height:100%;width:100%;object-fit:cover;">
