--- a/branch3.html
+++ b/branch3.html
@@ -19,7 +19,7 @@
   <img id="arrow" onclick="nextDoor()" src = "https://t4.ftcdn.net/jpg/05/30/79/15/360_F_530791557_T8hNharBQQJqmw0R2FRjCrC9CgNwaeui.jpg"/>
   <a id="link" href="ending.html?fishCount=0">Click this link to go to the next branch</a>
   <img id = "catImg" style="float:left;height:100%;width:100%;object-fit:cover;" src = "https://assets.tiltify.com/uploads/media_type/image/203025/blob-09636982-a21a-494b-bbe4-3692c2720ae3.jpeg" >
-  <img class = "roomImg" id = "room2" src = "https://i.pinimg.com/1200x/2e/51/04/2e5104455462d97f6b9a51a30aef4dda.jpg">
+  <img class = "roomImg" id = "room2" src = "https://news.yale.edu/sites/default/files/styles/featured_media/public/ynews-adobestock_624173838.jpg">
   <img class = "roomImg" id = "catImg" style="display:none;float:left;height:100%;width:100%;object-fit:cover;">
   <img class = "roomImg" id = "room1" src = "https://t4.ftcdn.net/jpg/06/22/84/97/360_F_622849717_jtzkPmWhVjnC6gB0YiiLI6TWDoOrYpz9.jpg">
   <img class = "roomImg" id="room0" src = "https://www.news-journalonline.com/gcdn/presto/2022/12/07/NDNJ/f67dae31-e590-4d66-b766-94b8e321bead-FISH_TANK08.jpg"/>
