--- a/branch1.html
+++ b/branch1.html
@@ -14,8 +14,9 @@
     <img id="door1" class = 'door' src="doooooo2.jpg" onclick="openDoor()"/>
     <!-- can i put a paragraph tag under the door? and only put writing in it when the door opens?-->
     <p id="hangman"></p>
-    <p id="'hangmandisplay">hi</p>
+    <p id="hangmandisplay">hi</p>
     <textarea id="input" rows="4" cols="50"></textarea>
+    <button id="inputbutton" onclick="submit()">Submit guess</button>
     <p id = 'dooresults'> </p>
     <a id="link" href="branch2.html?fishCount=0">Click this link to go to the next branch</a>
    <img id="arrow" src = "arrow.jpg" onclick = "nextDoor()"/>
