changed ending door to click on door instead of button

--- a/ending.html
+++ b/ending.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 <p id="fishDisplay">Fish Count: </p>
-<img id="endDoor" src="endDoor.png"/>
-<button id="endBtn" onclick="end()">open door</button>
+<img id="endDoor" src="endDoor.png" onclick="end()"/>
 <p id=results></p>
 <img id="winImg" src=""/>
 <script src="ending.js"></script>
